(Client) Feat: Localization

--- a/client/locales/English.json
+++ b/client/locales/English.json
@@ -1,3 +1,121 @@
 {
-  "_version": 1
+  "_version": 1,
+
+  "Button.Apply": "Apply",
+  "Button.Confirm": "Confirm",
+  "Button.Save": "Save",
+  "Button.Cancel": "Cancel",
+  "Button.Close": "Close",
+  "Button.Reset": "Reset",
+  "Button.Action.Enable": "Enable",
+  "Button.Action.Disable": "Disable",
+  "Button.State.Enabled": "Enabled",
+  "Button.State.Disabled": "Disabled",
+
+  "Component.Auth.Title": "Name",
+  "Component.Auth.Login": "Login",
+  "Component.Auth.IP": "IP",
+  "Component.Auth.Port": "Port",
+  "Component.Auth.Password": "Password",
+  "Component.Auth.Connect": "CONNECT",
+  "Component.Auth.Hover.ClientSettings": "Client Settings",
+  "Component.Auth.Hover.ConnectionProfiles": "Connection Profiles",
+  "Component.Auth.Error.PasswordTooLarge": "Max password length is 20 characters",
+  "Component.Auth.Error.PasswordTooSmall": "Minimal password length is 4 characters",
+  "Component.Auth.Error.TitleTooShort": "Minimal title length is 1 character",
+  "Component.Auth.Error.WrongIpAddress": "Failed to parse IP address",
+  "Component.Auth.Error.WrongPort": "Failed to parse port",
+
+  "Component.ConnectionProfiles.Card.Address": "Address",
+  "Component.ConnectionProfiles.Card.Port": "Port",
+  "Component.ConnectionProfiles.Card.Edit": "Edit",
+  "Component.ConnectionProfiles.Card.Delete": "Delete",
+  "Component.ConnectionProfiles.Card.Use": "Use",
+  "Component.ConnectionProfiles.Heading": "Connection Profiles",
+  "Component.ConnectionProfiles.EmptyLabel": "Empty",
+  "Component.ConnectionProfiles.Hover.Add": "Add new profile",
+  "Component.ConnectionProfiles.Hover.Save": "Save profiles",
+  "Component.ConnectionProfiles.Modal.ErrorRemove": "Failed to remove profile.",
+  "Component.ConnectionProfiles.Modal.ErrorSave": "Failed to save connection profiles.",
+
+  "Component.Root.Dashboard": "Dashboard",
+
+  "Error.AdditionalInfo": "Additional Info",
+  "Error.FailedSaveClientConfigIntoFile": "Failed to save client config into file!",
+
+  "Language.English": "English",
+  "Language.Ukrainian": "Ukrainian",
+
+  "Logging.Level.Off": "Off",
+  "Logging.Level.Error": "Error",
+  "Logging.Level.Warn": "Warn",
+  "Logging.Level.Info": "Info",
+  "Logging.Level.Debug": "Debug",
+  "Logging.Level.Trace": "Trace",
+
+  "Message.Success.ProfilesSaved": "Successfully saved connection profiles!",
+  "Message.Success.ClientConfigSaved": "Successfully saved client config!",
+
+  "Modal.Title.Error": "Error",
+  "Modal.Title.Info": "Info",
+  "Modal.Title.AddProfile": "Add Profile",
+  "Modal.Title.EditProfile": "Edit Profile",
+  "Modal.Error.FailedSaveProfile": "Failed to save profile",
+  "Modal.Error.FailedEditProfile": "Failed to edit profile.",
+
+  "Response.PasswordChange.Success": "Successfully changed password! Don't forget to save the config, if needed.",
+  "Response.SaveConfig.Success": "Successfully saved the config!",
+  "Response.SetCompression.Success.On": "Compression is enabled! Changes will take effect after saving config and reboot.",
+  "Response.SetCompression.Success.Off": "Compression is disabled! Changes will take effect after saving config and reboot.",
+  "Response.SetInterface.Success": "Interface set: %{interface}! Changes will take effect after saving config and reboot.",
+  "Response.Error.ConfigSave": "Failed to save config file.",
+  "Response.Error.InterfacesGet": "Failed to get server network interfaces list.",
+  "Response.Error.InvalidMessageFormat": "Invalid message format.",
+  "Response.Error.InvalidInterface": "Invalid interface.",
+  "Response.Error.PasswordChange": "Failed to change password.",
+
+  "Tab.About.Description": "Client-server analyser of network traffic on a home network",
+  "Tab.About.Developer": "Developer: Alex Kovalov",
+  "Tab.About.CheckGithub": "Check out the code on GitHub!",
+  "Tab.About.LatestRelease": "Latest release",
+
+  "Tab.SettingsClient.Hover.FieldNotApplied": "This field is differ from set up. Also, don’t forget to save the config file if needed.",
+  "Tab.SettingsClient.Hover.SettingSavesConfig": "Setting just saves the config file.",
+  "Tab.SettingsClient.Label.SaveConfig": "Save Config",
+  "Tab.SettingsClient.Label.Compression": "Compression",
+  "Tab.SettingsClient.Label.Language": "Language",
+  "Tab.SettingsClient.Label.LogFormat": "Log Format",
+  "Tab.SettingsClient.Label.LogLevel": "Log Level",
+  "Tab.SettingsClient.Label.SyncDelay": "Sync Delay",
+  "Tab.SettingsClient.Label.Theme": "Theme",
+  "Tab.SettingsClient.Suffix.SyncDelay": "seconds",
+  "Tab.SettingsClient.Note": "* Note (Hover)",
+  "Tab.SettingsClient.Note.FieldAppliedImmediately": "The field takes effect after applying.",
+  "Tab.SettingsClient.Note.FieldAppliedAfterLogout": "The field takes effect after logout.",
+  "Tab.SettingsClient.Note.FieldAppliedAfterRestart": "The field takes effect after config save & app restart.",
+
+  "Tab.SettingsServer.Label.RequestSettings": "Request Active Settings",
+  "Tab.SettingsServer.Label.SaveConfig": "Save Config",
+  "Tab.SettingsServer.Label.RestartServer": "Restart the server",
+  "Tab.SettingsServer.Label.Compression": "Compression",
+  "Tab.SettingsServer.Label.CompressionConfig": "Compression (Config)",
+  "Tab.SettingsServer.Label.ChangePassword": "Change Password",
+  "Tab.SettingsServer.Label.Interfaces": "Interfaces",
+  "Tab.SettingsServer.Label.Interfaces.Available": "Available Interfaces",
+  "Tab.SettingsServer.Label.InterfaceConfig": "Config Interface",
+  "Tab.SettingsServer.Note.RestartServer": "After confirmation, you may not receive a message about the reboot.\nMonitor the server status.",
+
+  "Tabs.Placeholder": "Tab",
+  "Tabs.Status": "Status",
+  "Tabs.ClientSettings": "Client Settings",
+  "Tabs.ServerSettings": "Server Settings",
+  "Tabs.About": "About",
+  "Tabs.Logout": "Logout",
+  "Tabs.Exit": "Exit",
+
+  "Text.Active": "Active",
+  "Text.Chosen": "Chosen",
+  "Text.LastUpdate": "Last Update",
+  "Text.LastUpdate.Never": "Never",
+  "Text.None": "None"
 }
