--- a/client/locales/Ukrainian.json
+++ b/client/locales/Ukrainian.json
@@ -1,3 +1,121 @@
 {
-  "_version": 1
+  "_version": 1,
+
+  "Button.Apply": "Застосувати",
+  "Button.Confirm": "Підтвердити",
+  "Button.Save": "Зберегти",
+  "Button.Cancel": "Скасувати",
+  "Button.Close": "Закрити",
+  "Button.Reset": "Скинути",
+  "Button.Action.Enable": "Увімкнути",
+  "Button.Action.Disable": "Вимкнути",
+  "Button.State.Enabled": "Увімкнено",
+  "Button.State.Disabled": "Вимкнено",
+
+  "Component.Auth.Title": "Назва",
+  "Component.Auth.Login": "Логін",
+  "Component.Auth.IP": "IP",
+  "Component.Auth.Port": "Порт",
+  "Component.Auth.Password": "Пароль",
+  "Component.Auth.Connect": "Підключитися",
+  "Component.Auth.Hover.ClientSettings": "Налаштування клієнта",
+  "Component.Auth.Hover.ConnectionProfiles": "Профілі підключень",
+  "Component.Auth.Error.PasswordTooLarge": "Максимальна довжина пароля — 20 символів",
+  "Component.Auth.Error.PasswordTooSmall": "Мінімальна довжина пароля — 4 символи",
+  "Component.Auth.Error.TitleTooShort": "Мінімальна довжина назви — 1 символ",
+  "Component.Auth.Error.WrongIpAddress": "Неправильний формат IP-адреси",
+  "Component.Auth.Error.WrongPort": "Неправильний формат порту",
+
+  "Component.ConnectionProfiles.Card.Address": "Адреса",
+  "Component.ConnectionProfiles.Card.Port": "Порт",
+  "Component.ConnectionProfiles.Card.Edit": "Редагувати",
+  "Component.ConnectionProfiles.Card.Delete": "Видалити",
+  "Component.ConnectionProfiles.Card.Use": "Використати",
+  "Component.ConnectionProfiles.Heading": "Профілі підключень",
+  "Component.ConnectionProfiles.EmptyLabel": "Порожньо",
+  "Component.ConnectionProfiles.Hover.Add": "Додати новий профіль",
+  "Component.ConnectionProfiles.Hover.Save": "Зберегти профілі",
+  "Component.ConnectionProfiles.Modal.ErrorRemove": "Не вдалося видалити профіль.",
+  "Component.ConnectionProfiles.Modal.ErrorSave": "Не вдалося зберегти профілі підключень",
+
+  "Component.Root.Dashboard": "Панель керування",
+
+  "Error.AdditionalInfo": "Додаткова інформація",
+  "Error.FailedSaveClientConfigIntoFile": "Не вдалося зберегти конфігурацію клієнта у файл!",
+
+  "Language.English": "Англійська",
+  "Language.Ukrainian": "Українська",
+
+  "Logging.Level.Off": "Вимкнено",
+  "Logging.Level.Error": "Помилки",
+  "Logging.Level.Warn": "Попередження",
+  "Logging.Level.Info": "Інформація",
+  "Logging.Level.Debug": "Дебаг",
+  "Logging.Level.Trace": "Трейс",
+
+  "Message.Success.ProfilesSaved": "Профілі підключень успішно збережено!",
+  "Message.Success.ClientConfigSaved": "Конфігурацію клієнта успішно збережено!",
+
+  "Modal.Title.Error": "Помилка",
+  "Modal.Title.Info": "Інформація",
+  "Modal.Title.AddProfile": "Додати профіль",
+  "Modal.Title.EditProfile": "Редагувати профіль",
+  "Modal.Error.FailedSaveProfile": "Не вдалося зберегти профіль.",
+  "Modal.Error.FailedEditProfile": "Не вдалося відредагувати профіль.",
+
+  "Response.PasswordChange.Success": "Пароль успішно змінено! Не забудьте зберегти конфігурацію, якщо потрібно.",
+  "Response.SaveConfig.Success": "Конфігурацію успішно збережено!",
+  "Response.SetCompression.Success.On": "Стиснення увімкнено! Зміни набудуть чинності після збереження конфігурації та перезавантаження.",
+  "Response.SetCompression.Success.Off": "Стиснення вимкнено! Зміни набудуть чинності після збереження конфігурації та перезавантаження.",
+  "Response.SetInterface.Success": "Інтерфейс встановлено: %{interface}! Зміни набудуть чинності після збереження конфігурації та перезавантаження.",
+  "Response.Error.ConfigSave": "Не вдалося зберегти файл конфігурації.",
+  "Response.Error.InterfacesGet": "Не вдалося отримати список мережевих інтерфейсів сервера.",
+  "Response.Error.InvalidMessageFormat": "Неправильний формат повідомлення.",
+  "Response.Error.InvalidInterface": "Недійсний інтерфейс.",
+  "Response.Error.PasswordChange": "Не вдалося змінити пароль.",
+
+  "Tab.About.Description": "Клієнт-серверний аналізатор мережевого трафіку у домашній мережі.",
+  "Tab.About.Developer": "Розробник: Ковальов Олександр",
+  "Tab.About.CheckGithub": "Перегляньте код на GitHub!",
+  "Tab.About.LatestRelease": "Останній реліз",
+
+  "Tab.SettingsClient.Hover.FieldNotApplied": "Це поле відрізняється від встановленого. Також не забудьте зберегти файл конфігурації, якщо потрібно.",
+  "Tab.SettingsClient.Hover.SettingSavesConfig": "Це налаштування лише зберігає файл конфігурації.",
+  "Tab.SettingsClient.Label.SaveConfig": "Зберегти конфігурацію",
+  "Tab.SettingsClient.Label.Compression": "Стиснення",
+  "Tab.SettingsClient.Label.Language": "Мова",
+  "Tab.SettingsClient.Label.LogFormat": "Формат логування",
+  "Tab.SettingsClient.Label.LogLevel": "Рівень логування",
+  "Tab.SettingsClient.Label.SyncDelay": "Затримка синхронізації",
+  "Tab.SettingsClient.Label.Theme": "Тема",
+  "Tab.SettingsClient.Suffix.SyncDelay": "секунд",
+  "Tab.SettingsClient.Note": "* Примітка",
+  "Tab.SettingsClient.Note.FieldAppliedImmediately": "Налаштування набуває чинності одразу після застосування.",
+  "Tab.SettingsClient.Note.FieldAppliedAfterLogout": "Налаштування набуде чинності після виходу з системи.",
+  "Tab.SettingsClient.Note.FieldAppliedAfterRestart": "Налаштування набуде чинності після збереження конфігурації та перезапуску програми.",
+
+  "Tab.SettingsServer.Label.RequestSettings": "Запитати активні налаштування",
+  "Tab.SettingsServer.Label.SaveConfig": "Зберегти конфігурацію",
+  "Tab.SettingsServer.Label.RestartServer": "Перезапустити сервер",
+  "Tab.SettingsServer.Label.Compression": "Стиснення",
+  "Tab.SettingsServer.Label.CompressionConfig": "Стиснення (конфігурація)",
+  "Tab.SettingsServer.Label.ChangePassword": "Змінити пароль",
+  "Tab.SettingsServer.Label.Interfaces": "Інтерфейси",
+  "Tab.SettingsServer.Label.Interfaces.Available": "Доступні інтерфейси",
+  "Tab.SettingsServer.Label.InterfaceConfig": "Інтерфейс в конфігурації",
+  "Tab.SettingsServer.Note.RestartServer": "Після підтвердження ви можете не отримати повідомлення про перезапуск.\nСлідкуйте за станом сервера.",
+
+  "Tabs.Placeholder": "Вкладка",
+  "Tabs.Status": "Статус",
+  "Tabs.ClientSettings": "Клієнт",
+  "Tabs.ServerSettings": "Сервер",
+  "Tabs.About": "Про програму",
+  "Tabs.Logout": "Від'єднатись",
+  "Tabs.Exit": "Вихід",
+
+  "Text.Active": "Активно",
+  "Text.Chosen": "Обрано",
+  "Text.LastUpdate": "Останнє оновлення",
+  "Text.LastUpdate.Never": "Ніколи",
+  "Text.None": "Немає"
 }
