--- a/client/locales/English.json
+++ b/client/locales/English.json
@@ -83,6 +83,8 @@
   "Tab.SettingsClient.Hover.SettingSavesConfig": "Setting just saves the config file.",
   "Tab.SettingsClient.Label.SaveConfig": "Save Config",
   "Tab.SettingsClient.Label.Compression": "Compression",
+  "Tab.SettingsClient.Label.DropUnparsedFrames": "Drop Unparsed Frames",
+  "Tab.SettingsClient.Label.DropUnparsedFrames.Note": "If this option is enabled, the client will discard all raw frames. This reduces the load on the client. However, it's best to also disable the corresponding option (\"Sending Raw Frames\") in the server settings.",
   "Tab.SettingsClient.Label.Language": "Language",
   "Tab.SettingsClient.Label.LogFormat": "Log Format",
   "Tab.SettingsClient.Label.LogLevel": "Log Level",
