--- a/client/locales/Ukrainian.json
+++ b/client/locales/Ukrainian.json
@@ -68,10 +68,13 @@
   "Response.SetCompression.Success.On": "Стиснення увімкнено! Зміни набудуть чинності після збереження конфігурації та перезавантаження.",
   "Response.SetCompression.Success.Off": "Стиснення вимкнено! Зміни набудуть чинності після збереження конфігурації та перезавантаження.",
   "Response.SetInterface.Success": "Інтерфейс встановлено: %{interface}! Зміни набудуть чинності після збереження конфігурації та перезавантаження.",
+  "Response.SetSendUnparsedFrames.Success.On": "Відправка необроблених фреймів увімкнена! Зміни набудуть чинності після збереження конфігурації та перезавантаження.",
+  "Response.SetSendUnparsedFrames.Success.Off": "Відправка необроблених фреймів вимкнена! Зміни набудуть чинності після збереження конфігурації та перезавантаження.",
   "Response.Error.ConfigSave": "Не вдалося зберегти файл конфігурації.",
   "Response.Error.InterfacesGet": "Не вдалося отримати список мережевих інтерфейсів сервера.",
   "Response.Error.InvalidMessageFormat": "Неправильний формат повідомлення.",
   "Response.Error.InvalidInterface": "Недійсний інтерфейс.",
+  "Response.Error.MutexPoisoned": "Несподівана помилка виникла при блокуванні певної пам'яті.",
   "Response.Error.PasswordChange": "Не вдалося змінити пароль.",
 
   "Tab.About.Description": "Клієнт-серверний аналізатор мережевого трафіку у домашній мережі.",
