(Client) Feat: Unparsed frames threshold

--- a/client/locales/English.json
+++ b/client/locales/English.json
@@ -88,13 +88,16 @@
   "Tab.SettingsClient.Hover.SettingSavesConfig": "Setting just saves the config file.",
   "Tab.SettingsClient.Label.SaveConfig": "Save Config",
   "Tab.SettingsClient.Label.Compression": "Compression",
-  "Tab.SettingsClient.Label.DropUnparsedFrames": "Drop Unparsed Frames",
-  "Tab.SettingsClient.Label.DropUnparsedFrames.Note": "If this option is enabled, the client will discard all raw frames. This reduces the load on the client. However, it's best to also disable the corresponding option (\"Sending Raw Frames\") in the server settings.",
   "Tab.SettingsClient.Label.Language": "Language",
   "Tab.SettingsClient.Label.LogFormat": "Log Format",
   "Tab.SettingsClient.Label.LogLevel": "Log Level",
   "Tab.SettingsClient.Label.SyncDelay": "Sync Delay",
   "Tab.SettingsClient.Label.Theme": "Theme",
+  "Tab.SettingsClient.Label.UnparsedFramesDrop": "Unparsed Frames Drop",
+  "Tab.SettingsClient.Label.UnparsedFramesDrop.Note": "If this option is enabled, the client will discard all raw frames. This reduces the load on the client. However, it's best to also disable the corresponding option (\"Sending Raw Frames\") in the server settings.",
+  "Tab.SettingsClient.Label.UnparsedFramesThreshold": "Unparsed Frames Threshold",
+  "Tab.SettingsClient.Label.UnparsedFramesThreshold.Note": "If this option is enabled, only the last N frames (set here) will be held in runtime. It works if the \"Unparsed Frames Drop\" option is disabled.",
+  "Tab.SettingsClient.Suffix.Frames": "frames",
   "Tab.SettingsClient.Suffix.SyncDelay": "seconds",
   "Tab.SettingsClient.Note.FieldAppliedImmediately": "The field takes effect after applying.",
   "Tab.SettingsClient.Note.FieldAppliedAfterLogout": "The field takes effect after logout.",
