--- a/client/locales/Ukrainian.json
+++ b/client/locales/Ukrainian.json
@@ -88,13 +88,16 @@
   "Tab.SettingsClient.Hover.SettingSavesConfig": "Це налаштування лише зберігає файл конфігурації.",
   "Tab.SettingsClient.Label.SaveConfig": "Зберегти конфігурацію",
   "Tab.SettingsClient.Label.Compression": "Стиснення",
-  "Tab.SettingsClient.Label.DropUnparsedFrames": "Відкинути нерозібрані пакети",
-  "Tab.SettingsClient.Label.DropUnparsedFrames.Note": "Якщо цей параметр увімкнено, клієнт відкидає всі необроблені кадри. Це знижує навантаження на клієнт. Однак найкраще також вимкнути відповідну опцію («Надсилання необроблених кадрів») у налаштуваннях сервера.",
   "Tab.SettingsClient.Label.Language": "Мова",
   "Tab.SettingsClient.Label.LogFormat": "Формат логування",
   "Tab.SettingsClient.Label.LogLevel": "Рівень логування",
   "Tab.SettingsClient.Label.SyncDelay": "Затримка синхронізації",
   "Tab.SettingsClient.Label.Theme": "Тема",
+  "Tab.SettingsClient.Label.UnparsedFramesDrop": "Відкинути нерозібрані пакети",
+  "Tab.SettingsClient.Label.UnparsedFramesDrop.Note": "Якщо цей параметр увімкнено, клієнт відкидає всі необроблені кадри. Це знижує навантаження на клієнт. Однак найкраще також вимкнути відповідну опцію («Надсилання необроблених кадрів») у налаштуваннях сервера.",
+  "Tab.SettingsClient.Label.UnparsedFramesThreshold": "Зберігати кількість нерозібраних пакетів",
+  "Tab.SettingsClient.Label.UnparsedFramesThreshold.Note": "Якщо цей параметр увімкнено, лише останні N (встановлене тут значення) фреймів зберігатимуться під час виконання. Це працює, якщо вимкнено параметр \"Відкинути нерозібрані пакети\".",
+  "Tab.SettingsClient.Suffix.Frames": "фреймів",
   "Tab.SettingsClient.Suffix.SyncDelay": "секунд",
   "Tab.SettingsClient.Note.FieldAppliedImmediately": "Налаштування набуває чинності одразу після застосування.",
   "Tab.SettingsClient.Note.FieldAppliedAfterLogout": "Налаштування набуде чинності після повторного з'єднання.",
