(Client) Feat: Plot additions, peak network data

--- a/client/locales/English.json
+++ b/client/locales/English.json
@@ -85,11 +85,18 @@
   "Tab.About.Developer": "Developer: Alex Kovalov",
   "Tab.About.CheckGithub": "Check out the code on GitHub!",
   "Tab.About.LatestRelease": "Latest release",
-
+  
+  "Tab.Status.NetworkData.Label.Peak": "Peak",
+  "Tab.Status.NetworkData.Label.Throughput": "Throughput",
+  "Tab.Status.NetworkData.Label.Received": "Received",
+  "Tab.Status.NetworkData.Label.Sent": "Sent",
   "Tab.Status.Hover.PlotSettings": "Plot settings",
   "Tab.Status.Legend.Throughput": "Throughput",
   "Tab.Status.Legend.Send": "Send",
   "Tab.Status.Legend.Receive": "Receive",
+  "Tab.Status.Plot.Axis.X.Label": "Time",
+  "Tab.Status.Plot.Axis.X.Label.Suffix": "s.",
+  "Tab.Status.Plot.Axis.Y.Label": "Speed",
   "Tab.ThroughputSettings.Header": "Throughput Plot Settings",
   "Tab.ThroughputSettings.Hover.SettingSavesConfig": "Setting just saves the config file.",
   "Tab.ThroughputSettings.Label.DisplayPeriod": "Display Period",
