--- a/client/locales/Ukrainian.json
+++ b/client/locales/Ukrainian.json
@@ -114,6 +114,7 @@
   "Tab.Inspector.Protocol.DHCPv4.ServerAddress": "Адреса сервера",
   "Tab.Inspector.Protocol.DHCPv4.RelayAgentAddress": "Адреса агента ретрансляції",
   "Tab.Inspector.Protocol.DHCPv4.ClientMAC": "MAC клієнта",
+  "Tab.Inspector.Protocol.DHCPv6.MessageType": "Тип повідомлення",
 
   "Tab.Status.NetworkData.Label.Peak": "Peak",
   "Tab.Status.NetworkData.Label.Throughput": "Throughput",
